--- a/flat-login-form/index.pug
+++ b/flat-login-form/index.pug
@@ -1,10 +1,10 @@
 .container
   .info
-    h1 Flat Login Form
+    h1 AfroPay Intl.
     span Made with 
      i.fa.fa-heart
      |  by 
-     a(href="http://andytran.me") Andy Tran
+     a(href="http://getresolveit.com") ResolveIT LLC
 .form
   .thumbnail
     img(src='/African_Union_flag.png')
