--- a/flat-login-form/index.pug
+++ b/flat-login-form/index.pug
@@ -1,13 +1,13 @@
 .container
   .info
-    h1 AfroPay Intl.
+    h1 Flat Login Form
     span Made with 
      i.fa.fa-heart
      |  by 
-     a(href="http://getresolveit.com") ResolveIT LLC
+     a(href="http://andytran.me") Andy Tran
 .form
   .thumbnail
-    img(src='/African_Union_flag.png')
+    img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/hat.svg')
   form.register-form
     input(type='text', placeholder='name')
     input(type='password', placeholder='password')
